[tool.poetry]
name = "yasl"
version = "1.0.3"
description = "Yet another sparkline program/library"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/yasl/"
repository = 'http://github.com/MultipedRobotics/yasl'
# documentation = "http://..."
keywords = ['sparkline', 'spark', '', 'bar', 'graph', 'plot']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

[tool.poetry.scripts]
# # script_name = 'myscript:main'
sparkbar = "yasl.bin.sparkbar:main"

[tool.poetry.dependencies]
python = ">=3.6"
# importlib-metadata = { version = "*", python = "<3.7"}
importlib-metadata = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

# [mypy-pi_servo_serial]
# ignore_missing_imports = True

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
